# powering-up-your-types-with-annotated

./: .gitignore  DESCRIPTION.md  DESIGN.md  LICENSE  README.md  REFERENCES.md  TODO.md  alembic.ini  justfile  mkdocs.yml  prek.toml  pyproject.toml  reservations.db  skills-lock.json  sqlmodel_reservations.db
.agents/skills/giving-presentations/: SKILL.md
.agents/skills/giving-presentations/references/: guest-insights.md
.agents/skills/slidev/: SKILL.md
.agents/skills/slidev-styling/: SKILL.md
.agents/skills/slidev/references/: animation-click-marker.md  animation-drawing.md  animation-rough-marker.md  api-slide-hooks.md  build-og-image.md  build-pdf.md  build-remote-assets.md  build-seo-meta.md  code-groups.md  code-import-snippet.md  code-line-highlighting.md  code-line-numbers.md  code-magic-move.md  code-max-height.md  code-twoslash.md  core-animations.md  core-cli.md  core-components.md  core-exporting.md  core-frontmatter.md  core-global-context.md  core-headmatter.md  core-hosting.md  (+29 more)
.agents/skills/speaker-notes-style/: SKILL.md
.agents/skills/unocss/: SKILL.md
docs/: index.md  links.md
presentation/: .pre-commit-config.yaml  package.json  pnpm-lock.yaml  prek.toml  slides.md  vercel.json
presentation/slides/: 00-about-me.md  00-cover.md  01-section-two-patterns.md  01-use-case-semantic.md  02-use-case-framework.md  03-annotated-types.md  04-annotated-101.md  04-annotated-internals.md  04-flattening-direct.md  04-flattening-type-alias.md  04-internals.md  04-nested-flattening.md  04-origin-metadata.md  04-section-annotated-101.md  05-get-annotations-overview.md  05-get-annotations.md  05-get-type-hints.md  05-hasname-product.md  05-introspecting-annotated.md  05-introspection.md  05-section-consuming-metadata.md  05-type-hints-vs-annotations.md  06-future-annotations.md  06-pep-563-caveat.md  06-pep-747-typeform.md  07-annotated-not-a-type.md  07-not-a-type.md  07-section-typeform.md  07-svcs-problem.md  07-typeform-fix.md  07-typeform-update.md  08-contracts-di.md  08-contracts.md  08-di-depends.md  08-di-resolve.md  08-di-usage.md  08-production-di-libs.md  08-production-di.md  08-section-contracts.md  08-section-di.md  (+36 more)
presentation/styles/: index.css
snippets/: annotated.py  annotated_pizza.py  annotated_reservation.py  annotations_future.py  annotations_introspection.py  api_pizza.py  api_reservation.py  basic_pizza.py  basic_reservation.py  comparison_django.py  comparison_sqlmodel.py  conftest.py  dependency_injection.py  pandera_demo.py  persistent_pizza.py  persistent_reservation.py  pydantic_advanced.py  sqlalchemy_advanced.py  test_annotated_pizza.py  test_annotated_reservation.py  test_annotations_introspection.py  test_api_pizza.py  test_api_reservation.py  test_dependency_injection.py  test_persistent_pizza.py  test_persistent_reservation.py  test_pydantic_amount.py  type_checker_annotated.py
snippets/django_migrations/: 0001_initial.py
snippets/migrations/: env.py
snippets/migrations/versions/: 567e623b8f5b_initial_migration.py
snippets/sqlalchemy_migrations/: 0001_initial.py
snippets/sqlalchemy_migrations/versions/: 228bdb0a955f_initial_migrations.py  4b18dec93e53_initial_migration.py
(+23 files in other folders)
