[project]
name = "powering-up-your-types-with-annotated"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "alembic[tz]>=1.18.4",
    "annotated-doc>=0.0.4",
    "anyio>=4.12.1",
    "asgi-lifespan>=2.1",
    "fastapi[standard]>=0.129",
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
    "sqlalchemy[aiosqlite,asyncio,mypy]>=2.0.46",
    "svcs>=25.1",
    "typer>=0.23.1",
]

[dependency-groups]
test = [
    "dirty-equals>=0.11",
    "factory-boy>=3.3.3",
    "hypothesis>=6.151.6",
    "polyfactory>=3.2",
    "pytest>=9.0.2",
]
docs = [
    "griffe-typingdoc>=0.3",
    "mkdocs-material>=9.7.1",
    "mkdocstrings[python]>=1.0.3",
    "zensical>=0.0.23",
]
lint = [
    "mypy>=1.19.1",
]

[tool.pytest]
minversion = "9.0"
addopts = [ "-ra", "-q" ]
testpaths = [
    "snippets",
]

[tool.mypy]
plugins = [ "pydantic.mypy" ]
strict = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true
