[project]
name = "powering-up-your-types-with-annotated"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "alembic[tz]>=1.18.4",
    "annotated-doc>=0.0.4",
    "anyio>=4.12.1",
    "asgi-lifespan>=2.1",
    "djangorestframework>=3.16",
    "fastapi[standard]>=0.129",
    "httpx>=0.28.1",
    "nanodjango>=0.11.2",
    "pandas>=3.0.3",
    "pandera>=0.32",
    "pydantic>=2.12.5",
    "sqlalchemy[aiosqlite,asyncio,mypy]>=2.0.46",
    "sqlmodel>=0.0.27",
    "svcs>=25.1",
    "typer>=0.23.1",
    "typing-extensions>=4.15",
]

[dependency-groups]
test = [
    "dirty-equals>=0.11",
    "factory-boy>=3.3.3",
    "hypothesis>=6.151.6",
    "polyfactory>=3.2",
    "pytest>=9.0.2",
]
docs = [
    "griffe-typingdoc>=0.3",
    "mkdocs-material>=9.7.1",
    "mkdocstrings[python]>=1.0.3",
    "zensical>=0.0.23",
]
lint = [
    "mypy>=1.19.1",
    "pandas-stubs>=3.0.3.260530",
    "pyrefly>=1.1.1",
    "pyright>=1.1.410",
    "ty>=0.0.51",
    "zuban>=0.8.2",
]

[tool.mypy]
exclude = [
    "^snippets/comparison_django\\.py$",
    "^snippets/conftest\\.py$",
    "^snippets/django_migrations/",
    "^snippets/sqlalchemy_migrations/",
    "^snippets/test_.*\\.py$"
]
strict = true
plugins = [ "pydantic.mypy", "sqlalchemy.ext.mypy.plugin" ]
enable_incomplete_feature = [ "TypeForm" ]

[[tool.mypy.overrides]]
module = [
    "snippets.annotations_introspection",
    "snippets.test_annotations_introspection",
]
ignore_errors = true

[tool.pyright]
enableExperimentalFeatures = true

[tool.pytest]
addopts = [ "-ra", "-q" ]
minversion = "9.0"
testpaths = [
    "snippets",
]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true
